--- a/app/src/main/res/layout/fragment_auth_phone.xml
+++ b/app/src/main/res/layout/fragment_auth_phone.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fff">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingTop="30dp"
-        android:paddingBottom="30dp">
+        android:paddingBottom="50dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -23,8 +24,8 @@
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/paint_logo"
-            android:contentDescription="Kassa.Taxi" />
+            android:contentDescription="Kassa.Taxi"
+            app:srcCompat="@drawable/paint_logo" />
 
         <TextView
             android:id="@+id/textView3"
@@ -32,38 +33,28 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:layout_weight="1"
-            android:text="Введите код из СМС"
+            android:text="Введите номер телефона"
             android:textAlignment="center"
             android:textColor="#999"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/tv_agreement"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:lineSpacingMultiplier="1.2"
-            android:text="Мы отправили Вам 4-х значный код на указанный номер телефона"
-            android:textAlignment="center"
-            android:textColorLink="#222" />
-
         <EditText
-            android:id="@+id/input_code"
+            android:id="@+id/input_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
             android:layout_marginBottom="3dp"
             android:background="@drawable/edittext_primary"
+            android:cursorVisible="true"
+            android:digits="+() 1234567890-"
             android:ems="10"
-            android:digits="1234567890"
-            android:maxLength="4"
+            android:inputType="phone"
+            android:maxLength="16"
             android:maxLines="1"
+            android:text="+7 "
             android:textColorHint="#aaa"
             android:textCursorDrawable="@drawable/color_cursor"
-            android:inputType="number"
-            android:textAlignment="center"
             android:textSize="36sp"
             android:theme="@style/CustomTheme"
             app:backgroundTint="@color/grayText" />
@@ -78,13 +69,40 @@
             android:textColor="#FF4A4A" />
 
         <Button
-            android:id="@+id/btn_complite"
+            android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="7dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/btn_primary"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:radius="0dp"
             android:stateListAnimator="@null"
-            android:text="Подтвердить"
+            android:text="@string/login_btn"
             android:textColor="#ffffff" />
+
+        <CheckBox
+            android:id="@+id/login_checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:checked="true"
+            android:drawable="@drawable/checkbox_primary"
+            android:padding="0dp"
+            android:text="@string/login_agreement_title" />
+
+        <TextView
+            android:id="@+id/tv_agreement"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lineSpacingMultiplier="1.2"
+            android:text="@string/login_agreement"
+            android:textColorLink="#222"
+            android:textSize="13sp" />
+
+        <requestFocus />
     </LinearLayout>
+
 </ScrollView>
