added signUp, fixed login

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,4 +14,9 @@
         android:name="taxi.kassa.view.auth_phone.AuthPhoneFragment"
         android:label="AuthPhoneFragment" />
 
+    <fragment
+        android:id="@+id/authSignUpFragment"
+        android:name="taxi.kassa.view.auth_sign_up.AuthSignUpFragment"
+        android:label="AuthSignUpFragment" />
+
 </navigation>
