added SuccessRequestFragment, PreferenceManager

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,4 +19,9 @@
         android:name="taxi.kassa.view.auth_sign_up.AuthSignUpFragment"
         android:label="AuthSignUpFragment" />
 
+    <fragment
+        android:id="@+id/successRequestFragment"
+        android:name="taxi.kassa.view.success_request.SuccessRequestFragment"
+        android:label="SuccessRequestFragment" />
+
 </navigation>
