--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -61,6 +61,86 @@
         tools:text="4 500 ₽" />
 
     <TextView
+        android:id="@+id/balance_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bt_profile_gradient"
+        android:padding="18dp"
+        android:text="@string/balance"
+        android:textColor="@color/gray_light_profile"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/balance_tv" />
+
+    <TextView
+        android:id="@+id/orders_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bt_profile_gradient"
+        android:padding="18dp"
+        android:text="@string/orders"
+        android:textColor="@color/gray_light_profile"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/balance_view" />
+
+    <TextView
+        android:id="@+id/withdrawal_applications_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bt_profile_gradient"
+        android:padding="18dp"
+        android:text="@string/withdrawal_applications"
+        android:textColor="@color/gray_light_profile"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/orders_view" />
+
+    <TextView
+        android:id="@+id/accounts_and_cards_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bt_profile_gradient"
+        android:padding="18dp"
+        android:text="@string/accounts_and_cards"
+        android:textColor="@color/gray_light_profile"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/orders_view" />
+
+    <TextView
+        android:id="@+id/support_service_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bt_profile_gradient"
+        android:padding="18dp"
+        android:text="@string/support_service"
+        android:textColor="@color/gray_light_profile"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/accounts_and_cards_view" />
+
+    <TextView
         android:id="@+id/exit_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
