--- a/app/src/main/res/drawable/bg_intro_btn.xml
+++ b/app/src/main/res/drawable/bg_intro_btn.xml
@@ -3,7 +3,7 @@
     <item>
         <ripple android:color="@color/colorPrimary" tools:targetApi="lollipop">
             <item>
-                <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+                <shape android:shape="rectangle">
 
                     <corners android:bottomLeftRadius="8dp" android:bottomRightRadius="8dp" android:topLeftRadius="8dp" android:topRightRadius="8dp" />
 
