--- a/app/src/main/res/drawable/bg_registration_btn.xml
+++ b/app/src/main/res/drawable/bg_registration_btn.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+    <item>
+        <ripple android:color="@color/blackText" tools:targetApi="lollipop">
+            <item>
+                <shape android:shape="rectangle">
 
-    <corners
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp" />
+                    <corners android:bottomLeftRadius="8dp" android:bottomRightRadius="8dp" android:topLeftRadius="8dp" android:topRightRadius="8dp" />
 
-    <solid android:color="#23252D" />
+                    <solid android:color="#23252D" />
 
-</shape>
+                </shape>
+            </item>
+        </ripple>
+    </item>
+</selector>
