--- a/app/src/main/res/layout/fragment_auth_phone.xml
+++ b/app/src/main/res/layout/fragment_auth_phone.xml
@@ -82,6 +82,7 @@
             android:id="@+id/login_checkbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:buttonTint="@color/checkbox_color"
             android:checked="true"
             android:drawable="@drawable/checkbox_primary"
             android:paddingStart="8dp"
