--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="gray_code_text">#EEEEEE</color>
     <color name="gray_profile">#787A86</color>
     <color name="gray_light_profile">#D9DFE1</color>
+    <color name="checkbox_color">#E0C7B0</color>
 </resources>
