fixed Intro layout, removed unused resources

--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -219,4 +219,65 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/withdraw_citymobil_tv" />
 
+
+    <TextView
+        android:id="@+id/fuel_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="62dp"
+        android:text="@string/fuel_title"
+        android:textColor="@color/balance_fuel_gray"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gett_image" />
+
+    <ImageView
+        android:id="@+id/gazprom_image"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_gazprom"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fuel_title" />
+
+    <TextView
+        android:id="@+id/gazprom_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="1000 ₽"
+        android:textColor="@color/balance_green"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/gazprom_title"
+        app:layout_constraintStart_toEndOf="@+id/gazprom_image"
+        app:layout_constraintTop_toTopOf="@+id/gazprom_image" />
+
+    <TextView
+        android:id="@+id/gazprom_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="@string/gazprom_title"
+        android:textColor="@color/gray_profile"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/gazprom_image"
+        app:layout_constraintStart_toEndOf="@+id/gazprom_image" />
+
+    <TextView
+        android:id="@+id/replenish_gazprom_tv"
+        android:layout_width="104dp"
+        android:layout_height="44dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bg_registration_btn"
+        android:gravity="center"
+        android:padding="8dp"
+        android:text="@string/replenish"
+        android:textColor="@color/gray_intro_text"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/gazprom_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/gazprom_image" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
