--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="balance_gradient_dark">#16161E</color>
     <color name="balance_green">#1F924D</color>
     <color name="balance_red">#BD3139</color>
+    <color name="balance_fuel_gray">#C1BFBC</color>
 </resources>
