--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -54,7 +54,9 @@
         android:textAllCaps="false"
         android:textColor="@color/continue_color"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_signup" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_signup"
@@ -68,6 +70,8 @@
         android:textAllCaps="false"
         android:textColor="@color/gray_code_text"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
