--- a/app/src/main/res/animator/slide_out_right.xml
+++ b/app/src/main/res/animator/slide_out_right.xml
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:ordering="together">
-    <objectAnimator
-        android:interpolator="@android:anim/accelerate_interpolator"
-        android:propertyName="alpha"
-        android:valueType="floatType"
-        android:valueFrom="1"
-        android:valueTo="1"
-        android:duration="350"/>
-    <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
-        android:propertyName="x"
-        android:valueType="floatType"
-        android:valueFrom="0"
-        android:valueTo="-1280"
-        android:duration="350"/>
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shareInterpolator="@android:anim/decelerate_interpolator">
+    <translate
+        android:duration="300"
+        android:fromXDelta="0%"
+        android:toXDelta="100%" />
 </set>
