--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -122,7 +122,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/orders_view" />
+        app:layout_constraintTop_toBottomOf="@+id/withdrawal_applications_view" />
 
     <TextView
         android:id="@+id/support_service_view"
