--- a/app/src/main/res/layout/fragment_withdraws.xml
+++ b/app/src/main/res/layout/fragment_withdraws.xml
@@ -39,12 +39,16 @@
         app:srcCompat="@drawable/ic_notification" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="0dp"
+        android:id="@+id/withdraws_recycler"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="18dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/withdraws_title" />
+        app:layout_constraintTop_toBottomOf="@+id/withdraws_title"
+        tools:itemCount="8"
+        tools:listitem="@layout/item_withdrawal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
