--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="continue_color">#23252D</color>
     <color name="agreement_text_color">#C1C1C1</color>
     <color name="gray_application_text">#61636F</color>
-    <color name="gray_code_text">#EEEEEE</color>
+    <color name="white_code_text">#EEEEEE</color>
     <color name="gray_profile">#787A86</color>
     <color name="gray_light_profile">#D9DFE1</color>
     <color name="checkbox_color">#E0C7B0</color>
