changed Withdraw, added sending args

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -113,6 +113,9 @@
             app:exitAnim="@animator/slide_out_left"
             app:popEnterAnim="@animator/slide_in_left"
             app:popExitAnim="@animator/slide_out_right" />
+        <argument
+            android:name="withdrawal"
+            app:argType="taxi.kassa.model.responses.Withdraw" />
     </fragment>
 
     <fragment
