--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -229,7 +229,7 @@
         app:layout_constraintTop_toBottomOf="@+id/total_tv" />
 
     <Button
-        android:id="@+id/back_btn"
+        android:id="@+id/back_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginStart="24dp"
