--- a/app/src/main/res/layout/fragment_withdraws.xml
+++ b/app/src/main/res/layout/fragment_withdraws.xml
@@ -40,13 +40,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/withdraws_recycler"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="18dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/withdraws_title"
         tools:itemCount="8"
         tools:listitem="@layout/item_withdrawal" />
