--- a/app/src/main/res/layout/item_withdrawal.xml
+++ b/app/src/main/res/layout/item_withdrawal.xml
@@ -10,10 +10,11 @@
         android:id="@+id/time_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="62dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="28dp"
         android:textColor="@color/gray_profile"
         android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="14:20" />
@@ -22,9 +23,9 @@
         android:id="@+id/background"
         android:layout_width="308dp"
         android:layout_height="74dp"
-        android:layout_marginStart="46dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/bg_profile_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
