--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -95,6 +95,13 @@
             app:exitAnim="@animator/slide_out_left"
             app:popEnterAnim="@animator/slide_in_left"
             app:popExitAnim="@animator/slide_out_right" />
+        <action
+            android:id="@+id/action_profileFragment_to_accountsFragment"
+            app:destination="@id/accountsFragment"
+            app:enterAnim="@animator/slide_in_right"
+            app:exitAnim="@animator/slide_out_left"
+            app:popEnterAnim="@animator/slide_in_left"
+            app:popExitAnim="@animator/slide_out_right" />
     </fragment>
 
     <fragment
@@ -122,5 +129,10 @@
         android:id="@+id/withdrawFragment"
         android:name="taxi.kassa.view.withdraw.WithdrawFragment"
         android:label="WithdrawFragment" />
+
+    <fragment
+        android:id="@+id/accountsFragment"
+        android:name="taxi.kassa.view.accounts.AccountsFragment"
+        android:label="AccountsFragment" />
 
 </navigation>
