--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -104,6 +104,7 @@
         android:id="@+id/account_block"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:visibility="invisible"
         app:layout_constraintTop_toBottomOf="@+id/daily_withdrawal_tv"
         tools:visibility="visible">
 
