--- a/app/src/main/res/drawable/bg_profile_gradient.xml
+++ b/app/src/main/res/drawable/bg_profile_gradient.xml
@@ -4,7 +4,7 @@
         <ripple android:color="@color/blackText" tools:targetApi="lollipop">
             <item>
                 <shape android:shape="rectangle">
-                    <gradient android:angle="270" android:endColor="#1D1D23" android:startColor="#16161E" android:type="linear" />
+                    <solid android:color="@color/buttons_dark_background" />
                     <corners android:radius="8dp" />
                 </shape>
             </item>
